refactor: saving before refactor